--- a/datascience/index.html
+++ b/datascience/index.html
@@ -5,6 +5,9 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="author" content="Raul E. Lopez Briega">
+<meta name="description" content="Libro online de la comunidad de Inteligencia Artificial Argentina IAAR - Ciencia de datos. ¿Qué es la Ciencia de Datos?. Científico de datos. Analista de datos. Ingeniero de datos. python. R. 
+">
   
   
   <link rel="shortcut icon" href="../img/favicon.ico">
