--- a/python/index.html
+++ b/python/index.html
@@ -5,7 +5,9 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  
+  <meta name="author" content="Raul E. Lopez Briega">
+<meta name="description" content="Libro online de la comunidad de Inteligencia Artificial Argentina IAAR - Introducción a Python. Principales fortalezas de Python. Instalando Python. Librerías esenciales para el analisis de datos. Numpy. Jupyter. Matplotlib. Pandas. Scikit-Lean. SciPy. Frameworks para Deep Learning. TensorFlow. PyTorch. Keras. Theano. CNTK. MXNet.
+">
   
   <link rel="shortcut icon" href="../img/favicon.ico">
   <title>Intro Python - Libro online de IAAR</title>
