--- a/rlang/index.html
+++ b/rlang/index.html
@@ -5,7 +5,9 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  
+  <meta name="author" content="Raul E. Lopez Briega">
+<meta name="description" content="Libro online de la comunidad de Inteligencia Artificial Argentina IAAR - Introducción a R para la ciencia de datos. ¿Qué es R?. Ventajas de R. RStudio. Librerías para la ciencia de datos. Tidyverse. Caret. 
+">
   
   <link rel="shortcut icon" href="../img/favicon.ico">
   <title>Intro R - Libro online de IAAR</title>
