--- a/ML/index.html
+++ b/ML/index.html
@@ -5,7 +5,9 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  
+  <meta name="author" content="Raul E. Lopez Briega">
+<meta name="description" content="Libro online de la comunidad de Inteligencia Artificial Argentina IAAR - Machine Learning con Python. Qué es el machine learning, tipos de Machine Learning, sobreajuste, algoritmos más utilizados, librerías de python, pasos para construir un modelo.
+">
   
   <link rel="shortcut icon" href="../img/favicon.ico">
   <title>Machine Learning - Libro online de IAAR</title>
