--- a/NLP/index.html
+++ b/NLP/index.html
@@ -5,7 +5,9 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  
+  <meta name="author" content="Raul E. Lopez Briega">
+<meta name="description" content="Libro online de la comunidad de Inteligencia Artificial Argentina IAAR - Introducción al Procesamiento del Lenguaje Natural. ¿Qué es el Procesamiento del Lenguaje Natural?. Aplicaciones del Procesamiento del Lenguaje Natural. Corpus lingüístico. Librerías de Python para Procesamiento del Lenguaje Natural. Deep Learning y Procesamiento del Lenguaje Natural.
+">
   
   <link rel="shortcut icon" href="../img/favicon.ico">
   <title>Procesamiento de lenguaje - Libro online de IAAR</title>
