--- a/bigdata/index.html
+++ b/bigdata/index.html
@@ -5,6 +5,9 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="author" content="Raul E. Lopez Briega">
+<meta name="description" content="Libro online de la comunidad de Inteligencia Artificial Argentina IAAR - Introducción a la Big Data. ¿Qué es la Big Data?. Bases de datos NoSQL. Hadoop. Spark. Otras herramientas de Big data. Kafka. Storm.
+">
   
   
   <link rel="shortcut icon" href="../img/favicon.ico">
