--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Libro online de la comunidad de Inteligencia Artificial Argentina IAAR">
+  <meta name="author" content="Raul E. Lopez Briega">
+<meta name="description" content="Libro online de la comunidad de Inteligencia Artificial Argentina IAAR - Introducción a la Inteligencia Artificial. ¿Qué es la IA?. Objetivos. Enfoques. Fundamentos de la Inteligencia Artificial. Ramas de la Inteligencia Artificial. Aplicaciones. Nociones éticas. Cómo comenzar en el campo de la Inteligencia Artificial. Deep Learning. Ciencia de Datos. Big Data. Procesamiento del lenguaje. Python. R. sobre IAAR.
+">
   
   <link rel="shortcut icon" href="./img/favicon.ico">
   <title>Inteligencia Artificial - Libro online de IAAR</title>
@@ -345,5 +347,5 @@ init_mathjax();
 
 <!--
 MkDocs version : 0.16.3
-Build Date UTC : 2017-06-26 01:56:43
+Build Date UTC : 2017-06-26 22:23:45
 -->
