--- a/python/index.html
+++ b/python/index.html
@@ -9,7 +9,6 @@
 <meta name="description" content="Libro online de la comunidad de Inteligencia Artificial Argentina IAAR - Introducción a Python. Principales fortalezas de Python. Instalando Python. Librerías esenciales para el analisis de datos. Numpy. Jupyter. Matplotlib. Pandas. Scikit-Lean. SciPy. Frameworks para Deep Learning. TensorFlow. PyTorch. Keras. Theano. CNTK. MXNet.
 ">
   
-  
   <link rel="shortcut icon" href="../img/favicon.ico">
   <title>Intro Python - Libro online de IAAR</title>
   <link href='https://fonts.googleapis.com/css?family=Lato:400,700|Roboto+Slab:400,700|Inconsolata:400,700' rel='stylesheet' type='text/css'>
@@ -17,6 +16,7 @@
   <link rel="stylesheet" href="../css/theme.css" type="text/css" />
   <link rel="stylesheet" href="../css/theme_extra.css" type="text/css" />
   <link rel="stylesheet" href="../css/highlight.css">
+  <link rel="stylesheet" href="../css/social-share-kit.css">
   
   <script>
     // Current page data
@@ -27,7 +27,8 @@
   
   <script src="../js/jquery-2.1.1.min.js"></script>
   <script src="../js/modernizr-2.8.3.min.js"></script>
-  <script type="text/javascript" src="../js/highlight.pack.js"></script> 
+  <script type="text/javascript" src="../js/highlight.pack.js"></script>
+  <script type="text/javascript" src="../js/social-share-kit.min.js"></script> 
   
   <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -55,6 +56,14 @@
   </form>
 </div>
       </div>
+      <!-- Left & centered positioning -->
+<div class="ssk-sticky ssk-right ssk-center ssk-lg ssk-sticky-hide-xs">
+    <a href="" class="ssk ssk-facebook"></a>
+    <a href="" class="ssk ssk-twitter"></a>
+    <a href="" class="ssk ssk-linkedin"></a>
+    <a href="" class="ssk ssk-google-plus"></a>
+    <a href="" class="ssk ssk-whatsapp"></a>
+</div>
 
       <div class="wy-menu wy-menu-vertical" data-spy="affix" role="navigation" aria-label="main navigation">
 	<ul class="current">
