--- a/search.html
+++ b/search.html
@@ -14,10 +14,12 @@
   <link rel="stylesheet" href="./css/theme.css" type="text/css" />
   <link rel="stylesheet" href="./css/theme_extra.css" type="text/css" />
   <link rel="stylesheet" href="./css/highlight.css">
+  <link rel="stylesheet" href="./css/social-share-kit.css">
   
   <script src="./js/jquery-2.1.1.min.js"></script>
   <script src="./js/modernizr-2.8.3.min.js"></script>
   <script type="text/javascript" src="./js/highlight.pack.js"></script>
+  <script type="text/javascript" src="./js/social-share-kit.min.js"></script>
   <script>var base_url = '.';</script>
   <script data-main="./mkdocs/js/search.js" src="./mkdocs/js/require.js"></script>
 
@@ -48,6 +50,14 @@
   </form>
 </div>
       </div>
+      <!-- Left & centered positioning -->
+<div class="ssk-sticky ssk-right ssk-center ssk-lg ssk-sticky-hide-xs">
+    <a href="" class="ssk ssk-facebook"></a>
+    <a href="" class="ssk ssk-twitter"></a>
+    <a href="" class="ssk ssk-linkedin"></a>
+    <a href="" class="ssk ssk-google-plus"></a>
+    <a href="" class="ssk ssk-whatsapp"></a>
+</div>
 
       <div class="wy-menu wy-menu-vertical" data-spy="affix" role="navigation" aria-label="main navigation">
 	<ul class="current">
