--- a/internet-de-las-cosas/index.html
+++ b/internet-de-las-cosas/index.html
@@ -29,6 +29,9 @@
   <script src="../js/modernizr-2.8.3.min.js"></script>
   <script type="text/javascript" src="../js/highlight.pack.js"></script>
   <script type="text/javascript" src="../js/social-share-kit.min.js"></script> 
+  <script type="text/javascript">
+SocialShareKit.init();
+</script>
   
   <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
