--- a/internet-de-las-cosas/index.html
+++ b/internet-de-las-cosas/index.html
@@ -30,7 +30,8 @@
   <script type="text/javascript" src="../js/highlight.pack.js"></script>
   <script type="text/javascript" src="../js/social-share-kit.min.js"></script> 
   <script type="text/javascript">
-SocialShareKit.init();
+init_social = function(){ SocialShareKit.init();}
+init_social();
 </script>
   
   <script>
