--- a/datascience/index.html
+++ b/datascience/index.html
@@ -327,6 +327,8 @@ init_mathjax = function() {
 }
 init_mathjax();
 </script>
-
+<script type="text/javascript">
+  SocialShareKit.init();
+  </script>
 </body>
 </html>
