--- a/ML/index.html
+++ b/ML/index.html
@@ -718,6 +718,8 @@ init_mathjax = function() {
 }
 init_mathjax();
 </script>
-
+<script type="text/javascript">
+  SocialShareKit.init();
+  </script>
 </body>
 </html>
