--- a/about/index.html
+++ b/about/index.html
@@ -274,6 +274,9 @@ init_mathjax = function() {
 }
 init_mathjax();
 </script>
+<script type="text/javascript">
+  SocialShareKit.init();
+  </script>
 
 </body>
 </html>
