--- a/bibliografia/index.html
+++ b/bibliografia/index.html
@@ -284,6 +284,9 @@ init_mathjax = function() {
 }
 init_mathjax();
 </script>
+<script type="text/javascript">
+  SocialShareKit.init();
+  </script>
 
 </body>
 </html>
