--- a/internet-de-las-cosas/index.html
+++ b/internet-de-las-cosas/index.html
@@ -29,10 +29,6 @@
   <script src="../js/modernizr-2.8.3.min.js"></script>
   <script type="text/javascript" src="../js/highlight.pack.js"></script>
   <script type="text/javascript" src="../js/social-share-kit.min.js"></script> 
-  <script type="text/javascript">
-init_social = function(){ SocialShareKit.init();}
-init_social();
-</script>
   
   <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -307,6 +303,9 @@ init_mathjax = function() {
 }
 init_mathjax();
 </script>
+<script type="text/javascript">
+  SocialShareKit.init();
+  </script>
 
 </body>
 </html>
