--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 </div>
       </div>
       <!-- Left & centered positioning -->
-<div class="ssk-sticky ssk-right ssk-center ssk-lg ssk-sticky-hide-xs">
+<div class="ssk-sticky ssk-right ssk-center ssk-lg">
     <a href="" class="ssk ssk-facebook"></a>
     <a href="" class="ssk ssk-twitter"></a>
     <a href="" class="ssk ssk-linkedin"></a>
