--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="author" content="Raul E. Lopez Briega">
 <meta name="description" content="Libro online de la comunidad de Inteligencia Artificial Argentina IAAR - Introducción a la Inteligencia Artificial. ¿Qué es la IA?. Objetivos. Enfoques. Fundamentos de la Inteligencia Artificial. Ramas de la Inteligencia Artificial. Aplicaciones. Nociones éticas. Cómo comenzar en el campo de la Inteligencia Artificial. Deep Learning. Ciencia de Datos. Big Data. Procesamiento del lenguaje. Python. R. sobre IAAR.
 ">
-
+  
   <link rel="shortcut icon" href="./img/favicon.ico">
   <title>Inteligencia Artificial - Libro online de IAAR</title>
   <link href='https://fonts.googleapis.com/css?family=Lato:400,700|Roboto+Slab:400,700|Inconsolata:400,700' rel='stylesheet' type='text/css'>
@@ -57,12 +57,12 @@
 </div>
       </div>
       <!-- Left & centered positioning -->
-<div class="ssk-sticky ssk-right ssk-center ssk-lg">
+<div class="ssk-sticky ssk-right ssk-center ssk-lg ssk-sticky-hide-xs">
     <a href="" class="ssk ssk-facebook"></a>
     <a href="" class="ssk ssk-twitter"></a>
     <a href="" class="ssk ssk-linkedin"></a>
     <a href="" class="ssk ssk-google-plus"></a>
-    <a href="" class="ssk ssk-whatsapp"></a>
+    <a href="" class="ssk ssk-email"></a>
 </div>
 
       <div class="wy-menu wy-menu-vertical" data-spy="affix" role="navigation" aria-label="main navigation">
@@ -374,10 +374,11 @@ init_mathjax();
 <script type="text/javascript">
   SocialShareKit.init();
   </script>
+
 </body>
 </html>
 
 <!--
 MkDocs version : 0.16.3
-Build Date UTC : 2017-07-15 18:30:31
+Build Date UTC : 2017-07-16 02:29:11
 -->
