--- a/datascience/index.html
+++ b/datascience/index.html
@@ -62,7 +62,7 @@
     <a href="" class="ssk ssk-twitter"></a>
     <a href="" class="ssk ssk-linkedin"></a>
     <a href="" class="ssk ssk-google-plus"></a>
-    <a href="" class="ssk ssk-whatsapp"></a>
+    <a href="" class="ssk ssk-email"></a>
 </div>
 
       <div class="wy-menu wy-menu-vertical" data-spy="affix" role="navigation" aria-label="main navigation">
@@ -330,5 +330,6 @@ init_mathjax();
 <script type="text/javascript">
   SocialShareKit.init();
   </script>
+
 </body>
 </html>
