--- a/inteligencia-artificial/index.html
+++ b/inteligencia-artificial/index.html
@@ -214,14 +214,16 @@ Durante décadas hemos soñado con construir máquinas inteligentes con cerebros
 <h3 id="cuatro-enfoques-distintos">Cuatro enfoques distintos</h3>
 <p>Podemos distinguir cuatro enfoques distintos de abordar el problema de la <a href="https://es.wikipedia.org/wiki/Inteligencia_artificial">Inteligencia Artificial</a>. </p>
 <ol>
-<li><strong>Sistemas que se comportan como humanos</strong>: Aquí la idea es desarrollar máquinas capaces de realizar funciones para las cuales se requeriría un humano inteligente. Dentro de este enfoque podemos encontrar la famosa <a href="https://es.wikipedia.org/wiki/Test_de_Turing">Prueba de Turing</a>. Para poder superar esta prueba, la máquina debería poseer las siguientes capacidades:</li>
-<li><strong><a href="https://es.wikipedia.org/wiki/Procesamiento_de_lenguajes_naturales">Procesamiento de lenguaje natural</a></strong>, que le permita comunicarse satisfactoriamente. </li>
+<li>
+<p><strong>Sistemas que se comportan como humanos</strong>: Aquí la idea es desarrollar máquinas capaces de realizar funciones para las cuales se requeriría un humano inteligente. Dentro de este enfoque podemos encontrar la famosa <a href="https://es.wikipedia.org/wiki/Test_de_Turing">Prueba de Turing</a>. Para poder superar esta prueba, la máquina debería poseer las siguientes capacidades:
+<ul>
+<li><strong><a href="https://es.wikipedia.org/wiki/Procesamiento_de_lenguajes_naturales">Procesamiento de lenguaje natural</a></strong>, que le permita comunicarse satisfactoriamente.</li>
 <li><strong><a href="https://es.wikipedia.org/wiki/Representaci%C3%B3n_del_conocimiento">Representación del conocimiento</a></strong>, para almacenar lo que se conoce o se siente.</li>
 <li><strong><a href="https://es.wikipedia.org/wiki/Razonamiento_autom%C3%A1tico">Razonamiento automático</a></strong>, para utilizar la información almacenada para responder a preguntas y extraer nuevas conclusiones.</li>
 <li><strong><a href="https://es.wikipedia.org/wiki/Aprendizaje_autom%C3%A1tico">Aprendizaje automático</a></strong>, para adaptarse a nuevas circunstancias y para detectar y extrapolar patrones.</li>
 <li><strong><a href="https://es.wikipedia.org/wiki/Visi%C3%B3n_artificial">Visión computacional</a></strong>, para percibir objetos.</li>
-<li>
-<p><strong><a href="https://es.wikipedia.org/wiki/Rob%C3%B3tica">Robótica</a></strong>, para manipular y mover objetos.  </p>
+<li><strong><a href="https://es.wikipedia.org/wiki/Rob%C3%B3tica">Robótica</a></strong>, para manipular y mover objetos. </li> 
+</ul></p>
 </li>
 <li>
 <p><strong>Sistemas que piensan como humanos</strong>: Aquí la idea es hacer que las máquinas piensen como humanos en el sentido más literal; es decir, que tengan capacidades cognitivas de toma de decisiones, resolución de problemas, aprendizaje, etc. Dentro de este enfoque podemos encontrar al campo
