--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Libro online de la comunidad de Inteligencia Artificial Argentina IAAR">
-  
+  <meta name="author" content="Raul E. Lopez Briega">
+<meta name="description" content="Libro online de la comunidad de Inteligencia Artificial Argentina IAAR - La era de las máquinas inteligentes. Las nuevas máquinas. Datos como el nuevo petróleo. El Boom de la automatización. La cuarta revolución industrial. Iniciativas de IAAR.
+">
   <link rel="shortcut icon" href="./img/favicon.ico">
   <title>Introducción - Libro online de IAAR</title>
   <link href='https://fonts.googleapis.com/css?family=Lato:400,700|Roboto+Slab:400,700|Inconsolata:400,700' rel='stylesheet' type='text/css'>
